@@ -94,8 +94,7 @@ public function loadConfig() {
 	$config['max_html5_upload_size'] = '107374182400'; // 100  GB
 	$config["upload_chunk_size"]  = '2000000';//
     $config["download_chunk_size"] = '5242880'; // The maximum amount of data that will be read into memory at once during multi-file downloads, default 5MB.
-
-    $config['html5_max_uploads'] = '30';
+    $config["html5_max_uploads"] = 30; // Max number of simultaneous uploads.
 
 	// update max_flash_upload_size if php.ini post_max_size and upload_max_filesize is set lower
 	$config['max_flash_upload_size'] = min(let_to_num(ini_get('post_max_size'))-2048, let_to_num(ini_get('upload_max_filesize')),$config['max_flash_upload_size']);
@@ -309,6 +308,8 @@ Voucher link: {serverURL}?vid={filevoucheruid}
 
 The voucher is available until {fileexpirydate} after which it will be automatically deleted.
 
+{filemessage_start}Personal message from {filefrom}: {filemessage}{filemessage_end}
+
 Best regards,
 
 {siteName}{CRLF}{CRLF}--simple_mime_boundary{CRLF}Content-type:text/html; charset={charset}{CRLF}{CRLF}
@@ -348,6 +349,20 @@ Best regards,
 	</TR>
 </TABLE>
 <P></P>
+{filemessage_start}<TABLE WIDTH=100% BORDER=1 BORDERCOLOR="#000000" CELLPADDING=4 CELLSPACING=0>
+	<COL WIDTH=100%>
+	<TR>
+		<TD WIDTH=100% BGCOLOR="#b3b3b3">
+			<P ALIGN=CENTER><B>Personal message from {filefrom}:</B></P>
+		</TD>
+	</TR>
+	<TR>
+		<TD WIDTH=100% BGCOLOR="#e6e6e6">
+			<P><I>{htmlfilemessage}</I></P>
+		</TD>
+	</TR>
+</TABLE>{filemessage_end}
+<p></p>
 <P>Best regards,</P>
 <P>{siteName}</P>
 </BODY>
